# libkdtree

./: .editorconfig  CHANGELOG.md  CMakeLists.txt  ChangeLog  README.md
examples/: CMakeLists.txt  test_find_within_range.cpp  test_hayne.cpp  test_kdtree.cpp
kdtree++/: allocator.hpp  function.hpp  iterator.hpp  kdtree.hpp  node.hpp  region.hpp
python-bindings/: CMakeLists.txt  gen-swig-hpp.py  py-kdtree.hpp.tmpl
python-bindings/kdtree/: Makefile  function.i  iterator.i  kdtree.i  node.i  region.i  test.py
